Fix - tour in dark mode

--- a/src/sass/components/labels/labelColorSelector.scss
+++ b/src/sass/components/labels/labelColorSelector.scss
@@ -37,7 +37,6 @@
     border-radius: 50%;
     z-index: 2;
     background: currentColor;
-    border: 2px solid $white;
     pointer-events: none;
     transition: border .1s ease-out;
 }
